# aquascape-sim

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
proto/proto/aquascape/v1/: api.proto  plant.proto
scripts/: generate_proto.py
src/aquascape_sim/: __init__.py  server.py  service.py
src/aquascape_sim/algo/: __init__.py  envelope.py  light.py  nutrients.py  photosynthesis.py  tick.py
tests/: test_envelope.py  test_nutrients.py  test_photosynthesis.py
